git commit -a -m "Add a new features of pop dialog"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_social_maps">Map</string>
     <string name="title_activity_users_maps">Map</string>
     <string name="title_activity_social_trial">Map</string>
+    <string name="title_activity_geo_fencing">Map</string>
 </resources>
